# todo-app

./: .gitignore  CLAUDE.md  MVP_COMPLETE.md  README.md
.specify/memory/: constitution.md
history/prompts/001-cli-todo-app/: 0001-cli-todo-app-specification.spec.prompt.md  0002-cli-todo-app-clarifications.spec.prompt.md  0003-cli-todo-app-implementation-plan.plan.prompt.md  0004-cli-todo-app-task-generation.tasks.prompt.md  0005-cli-todo-app-cross-artifact-analysis.misc.prompt.md  0006-cli-todo-app-mvp-implementation.green.prompt.md
history/prompts/constitution/: 0001-initialize-project-constitution-v1-0-0.constitution.prompt.md
specs/001-cli-todo-app/: analysis.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cli-todo-app/checklists/: requirements.md
specs/001-cli-todo-app/contracts/: task_manager_interface.md
todo-cli/: README.md  pyproject.toml
todo-cli/src/todo/: main.py  manager.py  models.py  ui.py
todo-cli/tests/integration/: test_app_flow.py
todo-cli/tests/unit/: test_manager.py  test_models.py  test_ui.py
