[project]
name = "todo"
version = "0.1.0"
description = "In-memory CLI todo application"
readme = "README.md"
authors = [
    { name = "Ahmer Aziz", email = "ahmeraziz2021@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
todo = "todo.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
]
